Add SignUpResult Enum

--- a/src/Steamfinity/Steamfinity/Steamfinity.vcxproj
+++ b/src/Steamfinity/Steamfinity/Steamfinity.vcxproj
@@ -178,6 +178,9 @@
     <Midl Include="App.idl">
       <DependentUpon>App.xaml</DependentUpon>
     </Midl>
+    <Midl Include="Enums\SignUpResult.idl">
+      <SubType>Designer</SubType>
+    </Midl>
     <Midl Include="MainPage.idl">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Midl>
