Add Constants Header

--- a/src/Steamfinity/Steamfinity/Steamfinity.vcxproj
+++ b/src/Steamfinity/Steamfinity/Steamfinity.vcxproj
@@ -124,6 +124,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Constants.h" />
     <ClInclude Include="Models\RefreshTokenDetails.h">
       <DependentUpon>Models\RefreshTokenDetails.idl</DependentUpon>
       <SubType>Code</SubType>
